# vampire-game

./: CMakeLists.txt  README.md  build.sh  main.c
source/: #main.c#  entity.c  entity.c~  entity.h  main.c
source/core/: game.c  game.h  game.h~  keypress.c  keypress.c~  keypress.h  main.c  main.c~  rooms.c  rooms.h  rooms.h~
source/entity/: entity.c  entity.h
